minikube/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: akhiltofficial/saas:portfolio
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"
      imagePullSecrets:
      - name: private-registry-secret
